--- a/src/app/admin/addconcours/addconcours.component.html
+++ b/src/app/admin/addconcours/addconcours.component.html
@@ -13,6 +13,13 @@
             </div>
         </div>
 
+        <div class="form-group">
+            <label>Type concour</label>
+            <input type="text" formControlName="type" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.type.errors }" />
+            <div *ngIf="submitted && f.type.errors" class="invalid-feedback">
+                <div *ngIf="f.type.errors.required">Type concour est requis</div>
+            </div>
+        </div>
     
         <div class="form-group">
             <label>Description concour</label>
