--- a/src/app/admin/concours/concours.component.html
+++ b/src/app/admin/concours/concours.component.html
@@ -7,6 +7,7 @@
       <tr>
         <th>#</th>
         <th>Nom concour</th>
+        <th>Type concour</th>
         <th>Description</th>
         <th>Date de début</th>
         <th>Date de fin</th>
@@ -17,6 +18,7 @@
       <tr  *ngFor="let concour of concours ;index as i">
         <th scope="row">{{i+1}}</th>
         <td>{{concour.nom}}</td>
+        <td>{{concour.type}}</td>
         <td>{{concour.desc}}</td>
         <td>{{concour.date_deb}}</td>
         <td>{{concour.date_fin}}</td>
